@@ -1,7 +1,7 @@
 /*
 	portaudio: audio output via PortAudio cross-platform audio API
 
-	copyright 2006-9 by the mpg123 project - free software under the terms of the LGPL 2.1
+	copyright 2006-2016 by the mpg123 project - free software under the terms of the LGPL 2.1
 	see COPYING and AUTHORS files in distribution or http://mpg123.org
 	initially written by Nicholas J. Humfrey
 */
@@ -25,7 +25,7 @@
 
 #define SAMPLE_SIZE			(2)
 #define FRAMES_PER_BUFFER	(256)
-#define FIFO_DURATION		(0.5f)
+#define FIFO_DURATION		(ao->device_buffer > 0. ? ao->device_buffer : 0.5f)
 
 
 typedef struct {
